--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
  <script src="javascript/prism.js"></script>
  <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js">
   </script>
+  
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js">
+  </script>
   <script
     src="https://rawgit.com/mailtoharshit/ForceSpinner/master/src/js/forcespinner.js">
   </script>
