--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 </head>
 <body bgcolor="#aaaaaa" onload="loadallspinners()">
     <nav class="slds-col slds-size--1-of-1">
+        <div class="headerLogo">
+         <img src="http://oi64.tinypic.com/tajv3m.jpg">
+        </div>
         <div id="wrapperHeader" style="text-align: center;">
             <h1 style="width:100%">
                 <div class="headerText">Simple HTML5 Spinner for Salesforce.com Projects 
