--- a/index.html
+++ b/index.html
@@ -189,7 +189,12 @@
     </code></pre>
         </div>
     </div>
-    <br/><br/>
+    <hr/>
+    <div class="section group">
+      <div class="col span_1_of_1">
+        Hello
+      </div>
+    </div>
     <footer class="mdl-mini-footer">
         <div class="mdl-mini-footer__left-section">
             <div class="mdl-logo">Title</div>
