--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <script>
         function loadallspinners(){
           forceSpin(div6, 'google');
+          forceSpin(div1, 'material');
+          forceSpin(div2, 'google-material');
+          forceSpin(div3,'dotsloader'); 
           forceSpin(div5, 'facebook', 'black', 'transparent');
           forceSpin(div7, 'bounce', 'black', 'transparent');
           forceSpin(div8, 'cubes', 'black', 'transparent');
@@ -89,6 +92,48 @@
    forceSpin(Your div id, 'google'); 
     </code></pre>
         </div>
+    </div>
+    <br/><br/>
+    <div class="slds-grid slds-grid--align-center"  >
+        <div id="div1" class="slds-size--4-of-12"
+            style="height:100px;background-color:#FFFFFF">
+        </div>
+        <div class="slds-size--1-of-12" style="height:8%">
+        </div>
+        <div class="slds-size--6-of-12"
+            style="height:100px;text-align:center">
+            <pre><code class="language-css">
+   forceSpin(Your div id, 'material'); 
+    </code></pre>
+        </div>
+    </div>
+    <br/><br/>
+        <div class="slds-grid slds-grid--align-center"  >
+        <div id="div2" class="slds-size--4-of-12"
+            style="height:100px;background-color:#FFFFFF">
+        </div>
+        <div class="slds-size--1-of-12" style="height:8%">
+        </div>
+        <div class="slds-size--6-of-12"
+            style="height:100px;text-align:center">
+            <pre><code class="language-css">
+   forceSpin(Your div id, 'google-material'); 
+    </code></pre>
+    </div>
+    </div>
+    <br/><br/>
+    <div class="slds-grid slds-grid--align-center">
+        <div id="div3" class="slds-size--4-of-12"
+            style="height:100px;background-color:#FFFFFF">
+        </div>
+        <div class="slds-size--1-of-12" style="height:8%">
+        </div>
+        <div class="slds-size--6-of-12"
+            style="height:100px;text-align:center">
+            <pre><code class="language-css">
+   forceSpin(div,dotsloader);
+    </code></pre>
+    </div>
     </div>
     <br/><br/>
     <div class="slds-grid slds-grid--align-center">
@@ -192,7 +237,7 @@
     <hr/>
     <div class="section group">
       <div class="col span_1_of_1">
-        Hello
+        Getting Started
       </div>
     </div>
     <footer class="mdl-mini-footer">
