--- a/index.html
+++ b/index.html
@@ -5,33 +5,31 @@
     <link rel="stylesheet" href="https://rawgit.com/mailtoharshit/ForceSpinner/master/src/css/forcespinner.css" type="text/css">
     <script src="javascript/prism.js"></script>
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script
-        src="https://rawgit.com/mailtoharshit/ForceSpinner/master/src/js/forcespinner.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://rawgit.com/mailtoharshit/ForceSpinner/master/src/js/forcespinner.js"></script>
     <link rel="stylesheet" href="stylesheets/stylesheet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <script>
-        function loadallspinners(){
-          forceSpin(div1, 'google');
-          forceSpin(div2, 'material');
-          forceSpin(div3, 'google-material');
-          forceSpin(div4,'dotsloader'); 
-          forceSpin(div5, 'facebook', 'black', 'transparent');
-          forceSpin(div6, 'bounce', 'black', 'transparent');
-          forceSpin(div7, 'cubes', 'black', 'transparent');
-          forceSpin(div8, 'dots', 'black', 'transparent');
-          forceSpin(div9, 'bubbles', 'black', 'transparent');
-          forceSpin(div10,'google-material');
-          forceSpin(div11, '', 'black', 'transparent');
+        function loadallspinners() {
+            forceSpin(div1, 'google');
+            forceSpin(div2, 'material');
+            forceSpin(div3, 'google-material');
+            forceSpin(div4, 'dotsloader');
+            forceSpin(div5, 'facebook', 'black', 'transparent');
+            forceSpin(div6, 'bounce', 'black', 'transparent');
+            forceSpin(div7, 'cubes', 'black', 'transparent');
+            forceSpin(div8, 'dots', 'black', 'transparent');
+            forceSpin(div9, 'bubbles', 'black', 'transparent');
+            forceSpin(div10, 'google-material');
+            forceSpin(div11, '', 'black', 'transparent');
         }
     </script>
 </head>
 <body bgcolor="#aaaaaa" onload="loadallspinners()">
     <nav class="slds-col slds-size--1-of-1">
         <div class="headerLogo">
-         <img src="http://oi64.tinypic.com/tajv3m.jpg">
+            <img src="http://oi64.tinypic.com/tajv3m.jpg">
         </div>
         <div id="wrapperHeader" style="text-align: center;">
             <h1 style="width:100%">
@@ -80,30 +78,127 @@
         </div>
     </div>
     <hr/>
-    <div class="slds-grid slds-grid--align-center"  >
-        <div id="div1" class="slds-size--6-of-12"
-            style="height:100px;background-color:#FFFFFF">
+    <div class="slds-grid slds-grid--align-center">
+        <div id="div1" class="slds-size--6-of-12" style="height:100px;background-color:#FFFFFF">
         </div>
-       
-        <div class="slds-size--6-of-12"
-            style="height:100px;text-align:center">
-            <pre><code class="language-css">
-   forceSpin(Your div id, 'google'); 
-    </code></pre>
+        <div class="slds-size--6-of-12" style="height:100px;text-align:center">
+            <pre>
+                <code class="language-css">
+                    forceSpin(Your div id, 'google'); 
+                </code>
+            </pre>
+        </div>
     </div>
+    <hr/>
+    <div class="slds-grid slds-grid--align-center">
+        <div id="div2" class="slds-size--6-of-12" style="height:100px;background-color:#FFFFFF">
+        </div>
+        <div class="slds-size--6-of-12" style="height:100px;text-align:center">
+            <pre>
+                <code class="language-css">
+                    forceSpin(Your div id, 'material'); 
+                </code>
+            </pre>
+        </div>
+    </div>
+    <hr/>
+    <div class="slds-grid slds-grid--align-center">
+        <div id="div2" class="slds-size--6-of-12" style="height:100px;background-color:#FFFFFF">
+        </div>
+        <div class="slds-size--6-of-12" style="height:100px;text-align:center">
+            <pre>
+                <code class="language-css">
+                    forceSpin(Your div id, 'google-material'); 
+                </code>
+            </pre>
+        </div>
+    </div>
+    <hr/>
+    <div class="slds-grid slds-grid--align-center">
+        <div id="div2" class="slds-size--6-of-12" style="height:100px;background-color:#FFFFFF">
+        </div>
+        <div class="slds-size--6-of-12" style="height:100px;text-align:center">
+            <pre>
+                <code class="language-css">
+                    forceSpin(div4, 'dotsloader');
+                </code>
+            </pre>
+        </div>
+    </div>
+    <hr/>
+    <div class="slds-grid slds-grid--align-center">
+        <div id="div2" class="slds-size--6-of-12" style="height:100px;background-color:#FFFFFF">
+        </div>
+        <div class="slds-size--6-of-12" style="height:100px;text-align:center">
+            <pre>
+                <code class="language-css">
+                    forceSpin(div5, 'facebook', 'black', 'transparent');
+                </code>
+            </pre>
+        </div>
+    </div>
+    <hr/>
+    <div class="slds-grid slds-grid--align-center">
+        <div id="div2" class="slds-size--6-of-12" style="height:100px;background-color:#FFFFFF">
+        </div>
+        <div class="slds-size--6-of-12" style="height:100px;text-align:center">
+            <pre>
+                <code class="language-css">
+                    forceSpin(div6, 'bounce', 'black', 'transparent');
+                </code>
+            </pre>
+        </div>
+    </div>
+    <hr/>
+    <div class="slds-grid slds-grid--align-center">
+        <div id="div2" class="slds-size--6-of-12" style="height:100px;background-color:#FFFFFF">
+        </div>
+        <div class="slds-size--6-of-12" style="height:100px;text-align:center">
+            <pre>
+                <code class="language-css">
+                    forceSpin(div7, 'cubes', 'black', 'transparent');
+                </code>
+            </pre>
+        </div>
+    </div>
+    <hr/>
+    <div class="slds-grid slds-grid--align-center">
+        <div id="div2" class="slds-size--6-of-12" style="height:100px;background-color:#FFFFFF">
+        </div>
+        <div class="slds-size--6-of-12" style="height:100px;text-align:center">
+            <pre>
+                <code class="language-css">
+                    forceSpin(div8, 'dots', 'black', 'transparent');
+                </code>
+            </pre>
+        </div>
+    </div>
+    <hr/>
+    <div class="slds-grid slds-grid--align-center">
+        <div id="div2" class="slds-size--6-of-12" style="height:100px;background-color:#FFFFFF">
+        </div>
+        <div class="slds-size--6-of-12" style="height:100px;text-align:center">
+            <pre>
+                <code class="language-css">
+                    forceSpin(div9, 'bubbles', 'black', 'transparent');
+                </code>
+            </pre>
+        </div>
     </div>
     <hr/>
     <div class="section group">
-      <div class="col span_1_of_1">
-        Getting Started
-      </div>
+        <div class="col span_1_of_1">
+            Getting Started
+        </div>
     </div>
     <footer class="mdl-mini-footer">
         <div class="mdl-mini-footer__left-section">
             <div class="mdl-logo">Title</div>
             <ul class="mdl-mini-footer__link-list">
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Privacy & Terms</a></li>
+                <li><a href="#">Help</a>
+                </li>
+                <li><a href="#">Privacy & Terms</a>
+                </li>
             </ul>
         </div>
     </footer>
