--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             forceSpin(div9, 'bubbles', 'black', 'transparent');
         }
     </script>
+    <style type="text/css">
+    .slds-size--6-of-12{
+        padding-top: 30px;
+    }
+    </style>
 </head>
 <body bgcolor="#aaaaaa" onload="loadallspinners()">
     <nav class="slds-col slds-size--1-of-1">
