--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="headerText">Simple HTML5 Spinner for Salesforce.com Projects 
                 </div>
                 <br>
-                <img src="http://www.queness.com/resources/images/15788.jpg">
+                <!-- <img src="http://www.queness.com/resources/images/15788.jpg"> -->
             </h1>
     </div>
   </nav>
@@ -132,7 +132,7 @@
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-             forceSpin(div5, 'facebook', 'white', 'transparent');
+             forceSpin(Your div id, 'facebook', 'white', 'transparent');
           </code>
       </pre>
     </div>
@@ -144,7 +144,7 @@
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-             forceSpin(div6, 'bounce', 'white', 'transparent');
+             forceSpin(Your div id, 'bounce', 'white', 'transparent');
           </code>
       </pre>
     </div>
@@ -156,7 +156,7 @@
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-            forceSpin(div7, 'cubes', 'white', 'transparent');
+            forceSpin(Your div id, 'cubes', 'white', 'transparent');
           </code>
       </pre>
     </div>
@@ -168,7 +168,7 @@
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-            forceSpin(div8, 'dots', 'white', 'transparent');
+            forceSpin(Your div id, 'dots', 'white', 'transparent');
           </code>
       </pre>
     </div>
@@ -180,7 +180,7 @@
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-            forceSpin(div9, 'bubbles', 'white', 'transparent');
+            forceSpin(Your div id, 'bubbles', 'white', 'transparent');
           </code>
       </pre>
     </div>
@@ -192,7 +192,7 @@
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-            forceSpin(div10, '', 'white', 'transparent');
+            forceSpin(Your div id, '', 'white', 'transparent');
           </code>
       </pre>
     </div>
@@ -200,17 +200,94 @@
   <hr/>
 
   <div class="section group">
-    <div class="col span_1_of_1">
-      Getting Started
+    <div class="col span_1_of_1" style="text-align: center; line-height: 1.5;
+    font-family: 'Roboto', 'sans-serif'; font-weight: normal;">
+      <div class="downloadSection">
+        <div class="downloadTitle"> Getting Started</div>
+        <div class="downloadContent">
+          <h4>Learn how to easily start using ForceSpinner in your Force.com Pages.</h4>
+        </div>
+      </div>
+
+      <h2 style="text-align:center">CDN</h2>
+      <pre style="text-align:center">
+          <code class="language-markup" style="font-weight:10px; font-size:16px; font-family:Roboto; text-align:left">
+               &lt;!-- Compiled and minified CSS --&gt; &#xd;
+               &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.rawgit.com/mailtoharshit/ForceSpinner/master/src/css/forcespinner.css&quot;&gt; &#xd; &lt;!-- Compiled and minified JavaScript --&gt; &#xd; &lt;script src=&quot;https://cdn.rawgit.com/mailtoharshit/ForceSpinner/master/src/js/forcespinner.js&quot;&gt;&lt;/script&gt;
+          </code>
+      </pre>
+      <h2 style="text-align:center">Download</h2>
+      <br/>
+      <div class="slds-grid">
+        <div id="downloadjs" class="slds-size--1-of-2">
+          <h4>Download Javascript</h4>
+          <a href="https://github.com/mailtoharshit/ForceSpinner/blob/master/src/js/forcespinner.js">
+            <button style="text-align:left" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+          </a>
+          <i class="material-icons">play_for_work</i>
+        </div>
+        <div id="downloadcss" class="slds-size--1-of-2">
+          <h4>Download CSS </h4>
+          <a href="https://github.com/mailtoharshit/ForceSpinner/blob/master/src/css/forcespinner.css">
+            <button style="text-align:left" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+          </a>
+          <i class="material-icons">play_for_work</i>
+        </div>
+      </div>
+      <hr/>
+      <div class="slds-grid">
+        <div id="downloadjs" class="slds-size--1-of-2">
+          <h2>HTML Setup</h2></div>
+        <div id="downloadjs" class="slds-size--1-of-2">
+          <p id="htmlText" style="text-align:left">Next you just have to make sure you link the files properly in your webpage. Generally it is wise to import javascript files at the end of the body to reduce page load time. Follow the example below on how to import ForceSnipper into your webpage.
+            One last thing to note is that you have to import jQuery before importing ForceSnipper.js!</p>
+        </div>
+      </div>
+      <hr/>
+      <div class="slds-grid">
+        <script src="https://gist.github.com/mailtoharshit/f5e5742890f76adf9396.js"></script>
+      </div>
     </div>
+
   </div>
   <footer class="mdl-mini-footer">
     <div class="mdl-mini-footer__left-section">
-      <div class="mdl-logo">Title</div>
-      <ul class="mdl-mini-footer__link-list">
-        <li><a href="#">Help</a></li>
-        <li><a href="#">Privacy & Terms</a></li>
-      </ul>
-    </div>
+      <div class="slds-grid">
+        <div class="mdl-logo slds-size--1-of-1">
+          <a href="http://www.oyecode.com"><img src="http://1.bp.blogspot.com/-qbsLac2CpPA/VRQ4cU-5WrI/AAAAAAAAIbA/QG6W3kp17F8/s1600/Screen%2BShot%2B2015-03-26%2Bat%2B9.47.38%2BAM.png" height="242" width="242"></a>
+        </div>
+        <div class="mdl-logo slds-size--1-of-1">
+          <iframe style="text-align:right" src="https://ghbtns.com/github-btn.html?user=mailtoharshit&repo=ForceSpinner&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+          <br/>
+          <a target="_blank" href="https://gitter.im/mailtoharshit/ForceSnipper">
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"> Join Chat
+            </button>
+          </a>
+          <br/>
+          <a id="follow-button" class="btn" title="Follow Oyecode on Twitter" href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fdev.twitter.com%2Fweb%2Ffollow-button&amp;ref_src=twsrc%5Etfw&amp;region=follow_link&amp;screen_name=Oyecode&amp;tw_p=followbutton"><i></i><span class="label" id="l">Follow <b>@Oyecode</b></span></a>
+        </div>
+      </div>
   </footer>
 </body>
+<style type="text/css">
+  .downloadSection{
+        background-color: #4DB6AC;
+            padding-top: 8rem;
+    padding-bottom: 1rem;
+  }
+  .downloadTitle{
+    color: #FFCDD2 !important;
+    font-weight: 300;
+    font-size: 2.28rem;
+    line-height: 110%;
+    margin: -5.86rem 0 0.912rem 0;
+    margin-bottom: 40px;
+  }
+  .htmlText{
+    padding-top: 20px;
+  }
+
+  h2{
+    font-size: 24px;
+  }
+</style>
