--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="stylesheets/stylesheet.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link rel='shortcut icon' type='image/x-icon' href='http://www.iconarchive.com/download/i99349/dtafalonso/android-lollipop/Contacts.ico' />
   <script>
     function loadallspinners(){
           forceSpin(div1, 'google');
