--- a/index.html
+++ b/index.html
@@ -229,10 +229,8 @@
         </div>
         <div id="downloadcss" class="slds-size--1-of-2">
           <h4>Download CSS </h4>
-          <a href="https://github.com/mailtoharshit/ForceSpinner/blob/master/src/css/forcespinner.css">
             <button style="text-align:left" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-          </a>
-          <i class="material-icons">play_for_work</i>
+          <a href="https://github.com/mailtoharshit/ForceSpinner/blob/master/src/css/forcespinner.css"><i class="material-icons">play_for_work</i></a>
         </div>
       </div>
       <hr/>
