--- a/index.html
+++ b/index.html
@@ -223,14 +223,15 @@
         <div id="downloadjs" class="slds-size--1-of-2">
           <h4>Download Javascript</h4>
           <a href="https://github.com/mailtoharshit/ForceSpinner/blob/master/src/js/forcespinner.js">
-            <button style="text-align:left" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-          </a>
-          <i class="material-icons">play_for_work</i>
+            <button style="text-align:left" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" />
+          
+            <i class="material-icons">play_for_work</i></a>
         </div>
         <div id="downloadcss" class="slds-size--1-of-2">
           <h4>Download CSS </h4>
+          <a href="https://github.com/mailtoharshit/ForceSpinner/blob/master/src/css/forcespinner.css">
             <button style="text-align:left" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-          <a href="https://github.com/mailtoharshit/ForceSpinner/blob/master/src/css/forcespinner.css"><i class="material-icons">play_for_work</i></a>
+          <i class="material-icons">play_for_work</i></a>
         </div>
       </div>
       <hr/>
