--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div id="downloadcss" class="slds-size--1-of-2">
           <h4>Download CSS </h4>
           <a href="https://github.com/mailtoharshit/ForceSpinner/blob/master/src/css/forcespinner.css">
-            <button style="text-align:left" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+            <button style="text-align:left" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" />
           <i class="material-icons">play_for_work</i></a>
         </div>
       </div>
