--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           forceSpin(div7, 'cubes', 'white', 'transparent');
           forceSpin(div8, 'dots', 'white', 'transparent');
           forceSpin(div9, 'bubbles', 'white', 'transparent');
-          forceSpin(div10, '', 'white', 'transparent');
+          forceSpin(div10, 'windows', 'red', 'transparent');
         }
   </script>
 </head>
