--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           forceSpin(div6, 'bounce', 'white', 'transparent');
           forceSpin(div7, 'cubes', 'white', 'transparent');
           forceSpin(div8, 'dots', 'white', 'transparent');
-          forceSpin(div9, 'bubbles', 'white', 'transparent');
+          forceSpin(div9, 'bubbles', 'green', 'transparent');
           forceSpin(div10, 'windows', 'red', 'transparent');
         }
   </script>
@@ -181,7 +181,7 @@
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-            forceSpin(Your div id, 'bubbles', 'white', 'transparent');
+            forceSpin(Your div id, 'bubbles', 'green', 'transparent');
           </code>
       </pre>
     </div>
@@ -193,7 +193,7 @@
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-            forceSpin(Your div id, '', 'white', 'transparent');
+            forceSpin(Your div id, 'windows', 'red', 'transparent');
           </code>
       </pre>
     </div>
