--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           forceSpin(div6, 'bounce', 'white', 'transparent');
           forceSpin(div7, 'cubes', 'white', 'transparent');
           forceSpin(div8, 'dots', 'white', 'transparent');
-          forceSpin(div9, 'bubbles', 'green', 'transparent');
+          forceSpin(div9, 'bubbles', 'white', 'transparent');
           forceSpin(div10, 'windows', 'red', 'transparent');
         }
   </script>
