--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body bgcolor="#aaaaaa" onload="loadallspinners()">
   <nav class="slds-col slds-size--1-of-1">
     <div class="headerLogo">
-      <img src="http://oi64.tinypic.com/tajv3m.jpg">
+      <a href="https://github.com/mailtoharshit/ForceSpinner/"><img src="http://oi64.tinypic.com/tajv3m.jpg"></a>
     </div>
     <div id="wrapperHeader" style="text-align: center;">
       <h1 style="width:100%">
