Added Linkedin urls

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <script src="https://rawgit.com/mailtoharshit/ForceSpinner/gh-pages/javascript/prism.js"></script>
   <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="https://rawgit.com/mailtoharshit/ForceSpinner/master/src/js/forcespinner.js"></script>
+  <!--<script src="https://rawgit.com/mailtoharshit/ForceSpinner/master/src/js/forcespinner.js"></script>-->
+  <script src="https://rawgit.com/ravichandra1/ForceSpinner/master/src/js/forcespinner.js"></script>
+  
   <link rel="stylesheet" href="https://rawgit.com/mailtoharshit/ForceSpinner/gh-pages/stylesheets/stylesheet.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -224,7 +226,7 @@ function download(file)
   
   
   <div class="slds-grid">
-    <div id="div11" class="slds-size--1-of-2" style="background-color:black"><br/><br/>
+    <div id="div11" class="slds-size--1-of-2" style="background-color:black"><br/><br/><br/>
      </div>
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
@@ -300,8 +302,8 @@ function download(file)
       <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
       <h1 class="mdl-mega-footer__heading">Credits</h1>
       <ul class="mdl-mega-footer__link-list">
-        <li><a href="#">RaviChandra Maddali</a></li>
-        <li><a href="#">ChandraMouli Vegi</a></li>
+        <li><a href="https://www.linkedin.com/in/ravi-maddali-a17415a2" target ="_top">RaviChandra Maddali</a></li>
+        <li><a href="https://www.linkedin.com/in/chandramouli-v-7ba974b6?authType=NAME_SEARCH&authToken=Quhq&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A414458494%2CauthType%3ANAME_SEARCH%2Cidx%3A1-2-2%2CtarId%3A1452740558691%2Ctas%3Achandra" target ="_top">ChandraMouli Vegi</a></li>
         <li><a href="#">Chaith Pathuri</a></li>
         <li><a href="#">Jayesh Anjara</a></li>
       </ul>
