--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           forceSpin(div8, 'dots', 'white', 'transparent');
           forceSpin(div9, 'bubbles', 'white', 'transparent');
           forceSpin(div10, 'windows', 'red', 'transparent');
-          forceSpin(div11, 'slds-spinner');
+          forceSpin(div11, 'slds');
 
 
         }
@@ -229,7 +229,7 @@ function download(file)
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-             forceSpin(Your div id, 'slds-spinner');
+             forceSpin(Your div id, 'slds');
           </code>
       </pre>
     </div>
@@ -354,7 +354,7 @@ function download(file)
   /* Editable */
 /* Probably shouldn't edit, but go crazy. */
 /* Sassery */
-.sdls_spinner {
+.slds_spinner {
   position: relative;
   top: 50%;
   left: 50%;
@@ -362,21 +362,21 @@ function download(file)
   width: 2em;
 }
 
-.sdls_spinner, .sdls_spinner div {
+.slds_spinner, .slds_spinner div {
   transform-origin: 50% 50%;
 }
 
-.sdls_spinner div {
+.slds_spinner div {
   position: relative;
   top: 0;
   left: 0;
   width: 100%;
 }
 
-.sdls_spinner:before,
-.sdls_spinner:after,
-.sdls_spinner div:before,
-.sdls_spinner div:after {
+.slds_spinner:before,
+.slds_spinner:after,
+.slds_spinner div:before,
+.slds_spinner div:after {
   animation-duration: 1000ms;
   animation-iteration-count: infinite;
   content: "";
@@ -387,25 +387,25 @@ function download(file)
   position: absolute;
 }
 
-.sdls_spinner:before,
-.sdls_spinner div:before {
+.slds_spinner:before,
+.slds_spinner div:before {
   animation-name: orbBounceBefore;
   top: -0.25em;
   left: -0.25em;
 }
 
-.sdls_spinner:after,
-.sdls_spinner div:after {
+.slds_spinner:after,
+.slds_spinner div:after {
   animation-name: orbBounceAfter;
   top: -0.25em;
   right: -0.25em;
 }
 
-.sdls_spinner-a {
+.slds_spinner-a {
   transform: rotate(60deg) translateY(0);
 }
 
-.sdls_spinner-b {
+.slds_spinner-b {
   transform: rotate(120deg) translateY(0);
 }
 
@@ -435,23 +435,23 @@ function download(file)
     transform: translateX(0);
   }
 }
-.sdls_spinner-a:before {
+.slds_spinner-a:before {
   animation-delay: 166.66667ms;
 }
 
-.sdls_spinner-b:before {
+.slds_spinner-b:before {
   animation-delay: 333.33333ms;
 }
 
-.sdls_spinner:after {
+.slds_spinner:after {
   animation-delay: 500ms;
 }
 
-.sdls_spinner-a:after {
+.slds_spinner-a:after {
   animation-delay: 666.66667ms;
 }
 
-.sdls_spinner-b:after {
+.slds_spinner-b:after {
   animation-delay: 833.33333ms;
 }
 
