--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
           forceSpin(div2, 'material');
           forceSpin(div3, 'google-material');
           //forceSpin(div4,'dotsloader'); 
-          forceSpin(div5, 'facebook', 'white', 'transparent');
-          forceSpin(div6, 'bounce', 'white', 'transparent'); 
-          forceSpin(div7, 'cubes', 'white', 'transparent');
-          forceSpin(div8, 'dots', 'white', 'transparent');
-          forceSpin(div9, 'bubbles', 'white', 'transparent');
+          forceSpin(div5, 'facebook', 'blue', 'transparent');
+          forceSpin(div6, 'bounce'); 
+          forceSpin(div7, 'cubes', 'pink', 'transparent');
+          forceSpin(div8, 'dots', 'yellow', 'transparent');
+          forceSpin(div9, 'bubbles', 'green', 'transparent');
           forceSpin(div10, 'windows', 'red', 'transparent');
           forceSpin(div11, 'slds');
 
@@ -154,7 +154,7 @@
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-             forceSpin(Your div id, 'bounce', 'white', 'transparent');
+             forceSpin(Your div id, 'bounce');
           </code>
       </pre>
     </div>
@@ -193,7 +193,7 @@
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-            forceSpin(Your div id, 'bubbles', 'white', 'transparent');
+            forceSpin(Your div id, 'bubbles','green', 'transparent');
           </code>
       </pre>
     </div>
@@ -344,8 +344,5 @@
     font-size: 24px;
   }
 
-  .slds_spinner {
-    margin-top: 75px;
-  }
-  
+  .slds_spinner { margin-top: 75px; }
 </style>
