Removed Color from SLDS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           forceSpin(div8, 'dots', 'white', 'transparent');
           forceSpin(div9, 'bubbles', 'white', 'transparent');
           forceSpin(div10, 'windows', 'red', 'transparent');
-          forceSpin(div11, 'slds','Green');
+          forceSpin(div11, 'slds');
 
 
         }
