Fixed Typo for SLDS

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <div class="slds-size--1-of-2" style="text-align:center; margin:auto; background-color:#f5f2f0;">
       <pre>
           <code class="language-css" margin-bottom:10px;>
-             forceSpin(Your div id, 'slds','color');
+             forceSpin(Your div id, 'slds');
           </code>
       </pre>
     </div>
