--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body bgcolor="#aaaaaa" onload="loadallspinners()">
   <nav class="slds-col slds-size--1-of-1">
     <div class="headerLogo">
-      <img src="http://i.imgur.com/NhuoYhP.png">
+      <img src="http://i.imgur.com/NhuoYhP.png" height="500px" witdth="700px">
     </div>
     <div id="wrapperHeader" style="text-align: center;">
       <h1 style="width:100%">
