Fixed Header Logo

--- a/index.html
+++ b/index.html
@@ -336,11 +336,23 @@
   .htmlText{
     padding-top: 20px;
   }
+  
+  .slds-size--1-of-1 {
+    width: 100%;
+    height: 70%;
+}
 
   h2{
     font-size: 24px;
   }
   .slds_spinner {
     margin-top: 75px;
+}
+.headerLogo {
+    height: 430px;
+    width: 430;
+    margin: auto;
+    text-align: center;
+    padding-right: 20%;
 }
 </style>
